--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -10,3 +10,9 @@
 div#wall #tag-3.slick.wicked{
   display: none;
 }
+div#wall div.parent #tag-5.slick{
+  display: none;
+}
+div#wall #tag-3.slick.wicked{
+  display: none;
+}
