--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -13,6 +13,6 @@ div#wall #tag-3.slick.wicked{
 div#wall div.parent #tag-5.slick{
   display: none;
 }
-div#wall #tag-3.slick.wicked{
+body div#wall div.parent div:last-child div#tag-6{
   display: none;
 }
