--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -10,7 +10,7 @@
 div#wall #tag-3.slick.wicked{
   display: none;
 }
-div#wall #tag-3.slick.wicked{
+#wall .parent #tag-4{
   display: none;
 }
 div#wall div.parent #tag-5.slick{
