--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -22,3 +22,7 @@ body div#wall div.parent div:last-child div#tag-6{
 body div#wall div.parent div:first-child > div#tag-7.slick{
   display: none;
 }
+
+#wall * {
+  display: none;
+}
